LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_add2.geom
geometrics: main

/* Should fail -> mismatched input 'color' expecting {'(', ID} */
add rectangle r1 color red to f1 x